--- a/404.md
+++ b/404.md
@@ -2,10 +2,10 @@
 permalink: /404.html
 ---
 
-# 404
+# Error 404
 
 ## This page does not currently exist.
 
-Sorry about that. Feel free to return [home](https://wilsonharper.net) or contact me if this is in error.
+Sorry about that. Feel free to return [home](https://wilsonharper.net), or contact me if this is in error.
 
-Thanks!
+Thank you!
